[gd_scene load_steps=6 format=3 uid="uid://s3f26ebgiehr"]

[ext_resource type="PackedScene" uid="uid://desh1w40padq8" path="res://ui/twitch/feature_entry.tscn" id="1_12yd1"]
[ext_resource type="Script" path="res://ui/twitch/feature_category.gd" id="1_kxcsa"]
[ext_resource type="Texture2D" uid="uid://caxev54f1spx0" path="res://assets/ui/icons/minus.png" id="1_tlrvt"]
[ext_resource type="Texture2D" uid="uid://21ejlvfa14lw" path="res://assets/ui/icons/plus.png" id="2_63l3j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_htgl8"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.498039)

[node name="FeatureCategory" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 28.0
grow_horizontal = 2
theme_override_constants/separation = 0
script = ExtResource("1_kxcsa")
expanded = true

[node name="CategoryHeader" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_htgl8")

[node name="CategoryHeaderContents" type="HBoxContainer" parent="CategoryHeader"]
layout_mode = 2

[node name="ButtonExpandCategory" type="CheckButton" parent="CategoryHeader/CategoryHeaderContents"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Expand Category"
theme_override_constants/icon_max_width = 20
theme_override_icons/checked = ExtResource("1_tlrvt")
theme_override_icons/unchecked = ExtResource("2_63l3j")
button_pressed = true
icon_alignment = 1
expand_icon = true

[node name="LabelCategoryName" type="Label" parent="CategoryHeader/CategoryHeaderContents"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
theme_override_font_sizes/font_size = 20
text = "Category Name"

[node name="CheckSelectCategory" type="CheckBox" parent="CategoryHeader/CategoryHeaderContents"]
unique_name_in_owner = true
layout_mode = 2
text = "Select All"

[node name="FeatureEntries" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="FeatureEntry" parent="FeatureEntries" instance=ExtResource("1_12yd1")]
layout_mode = 2
expanded = true

[connection signal="toggled" from="CategoryHeader/CategoryHeaderContents/ButtonExpandCategory" to="." method="_on_button_expand_category_toggled"]
[connection signal="gui_input" from="CategoryHeader/CategoryHeaderContents/LabelCategoryName" to="." method="_on_label_category_name_gui_input"]
[connection signal="toggled" from="CategoryHeader/CategoryHeaderContents/CheckSelectCategory" to="." method="_on_check_select_category_toggled"]
